<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.tajchert.hours"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp" >

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:fontFamily="sans-serif-light"
                android:gravity="center|top"
                android:text="@string/tab_extras_about_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/textViewAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:fontFamily="sans-serif-light"
                android:layout_below="@+id/textView2"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/author_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/RateandShareLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/textViewAuthor"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/buttonRate"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:fontFamily="sans-serif"
                    android:background="@drawable/button_classic"
                    android:text="@string/tab_extras_rate_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/tab_extras_rate_middle" />

                <Button
                    android:id="@+id/buttonShare"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:fontFamily="sans-serif"
                    android:background="@drawable/button_classic"
                    android:text="@string/tab_extras_share" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonContact"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_margin="3dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/RateandShareLayout"
                android:fontFamily="sans-serif"
                android:background="@drawable/button_classic"
                android:text="@string/tab_extras_contactme" />
             <Button
                android:id="@+id/buttonGoogle"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_margin="3dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/buttonContact"
                android:fontFamily="sans-serif"
                android:background="@drawable/google_button"
                android:text="@string/tab_extras_googleplus" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>