<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fragmentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:gravity="start"
        android:text="@string/configure_calendarselection_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/listViewCalendars"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_above="@+id/checkBoxCalendarFullDay"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fragmentTitle"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:overScrollMode="never"/>

    <CheckBox
        android:id="@+id/checkBoxCalendarFullDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBoxCalendarColors"
        android:layout_alignLeft="@+id/checkBoxCalendarColors"
        android:layout_alignStart="@+id/checkBoxCalendarColors"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/configure_fullday" />

    <CheckBox
        android:id="@+id/checkBoxCalendarColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBoxCalendarGoing"
        android:layout_alignLeft="@+id/checkBoxCalendarGoing"
        android:layout_alignStart="@+id/checkBoxCalendarGoing"
        android:fontFamily="sans-serif-light"
        android:text="@string/configure_colorfromcalendar" />

    <CheckBox
        android:id="@+id/checkBoxCalendarGoing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:text="@string/configure_notgoing" />

</RelativeLayout>