<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tajchert.hours.config.ConfigReady" >


     <TextView
        android:id="@+id/fragmentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="left"
        android:text="@string/configure_ready_title"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <com.tajchert.hours.ui.TextAwesome
        android:id="@+id/tvOk"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/fragmentTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/fa_check"
        android:textSize="120dp" />

     <TextView
         android:id="@+id/fragmentTitleSuggest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tvOk"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="@string/configure_ready_subtitle"
         android:textAppearance="?android:attr/textAppearanceLarge" />

     <LinearLayout
          android:id="@+id/textViewRowOne"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_below="@+id/fragmentTitleSuggest"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="10dp"
         android:gravity="left">
         <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1 "
         android:fontFamily="sans-serif"
         android:textAppearance="?android:attr/textAppearanceLarge" />
         <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/configure_ready_titleone"
         android:fontFamily="sans-serif-light"
         android:textAppearance="?android:attr/textAppearanceLarge" />
         
     </LinearLayout>
     
      <LinearLayout
          android:id="@+id/textViewRowTwo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_below="@+id/textViewRowOne"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="10dp"
         android:gravity="left">
         <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="2 "
         android:fontFamily="sans-serif"
         android:textAppearance="?android:attr/textAppearanceLarge" />
         <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/configure_ready_titletwo"
         android:fontFamily="sans-serif-light"
         android:textAppearance="?android:attr/textAppearanceLarge" />
         
     </LinearLayout>
      <LinearLayout
          android:id="@+id/textViewRowThree"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_below="@+id/textViewRowTwo"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="10dp"
         android:gravity="left">
         <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="3 "
         android:fontFamily="sans-serif"
         android:textAppearance="?android:attr/textAppearanceLarge" />
         <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/configure_ready_titlethree"
         android:fontFamily="sans-serif-light"
         android:textAppearance="?android:attr/textAppearanceLarge" />
         
     </LinearLayout>

      

</RelativeLayout>
