<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tajchert.hours.config.ConfigInfo" >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" >

            <ImageView
                android:id="@+id/imageViewEvent"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/clock_preview_one" />

            <TextView
                android:id="@+id/fragmentTitleEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewEvent"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/configure_info_titleevent"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragmentTitleEvent"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/configure_info_contentevent"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/imageViewFull"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/textViewEvent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/clock_preview_full" />

            <TextView
                android:id="@+id/fragmentTitleFullDayTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewFull"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/configure_info_titledetails"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewFullDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragmentTitleFullDayTitle"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/configure_info_contentdetails"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>