<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/topClockPreview"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/app_main_color"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <ImageView
            android:id="@+id/imageViewClockUnderflow"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignBottom="@+id/imageViewClockOverflow"
            android:layout_alignLeft="@+id/imageViewClockOverflow"
            android:layout_alignRight="@+id/imageViewClockOverflow"
            android:layout_alignTop="@+id/imageViewClockOverflow"
            android:layout_centerVertical="true" />

        <ImageView
            android:id="@+id/imageViewClockOverflow"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <AnalogClock
            android:id="@+id/analogClockActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageViewClockOverflow"
            android:layout_alignLeft="@+id/imageViewClockOverflow"
            android:layout_alignRight="@+id/imageViewClockOverflow"
            android:layout_alignTop="@+id/imageViewClockOverflow"
            android:layout_centerVertical="true"
            android:dial="@drawable/empty"
            android:hand_hour="@drawable/hand_hour"
            android:hand_minute="@drawable/hand_minute" />

        <com.tajchert.hours.ui.TextAwesomeClicable
            android:id="@+id/imageButtonNext"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@+id/imageViewClockUnderflow"
            android:gravity="center"
            android:text="@string/fa_chevron_right"
            android:textSize="30dp" />


        <com.tajchert.hours.ui.TextAwesomeClicable
            android:id="@+id/imageButtonPrev"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/imageViewClockUnderflow"
            android:gravity="center"
            android:text="@string/fa_chevron_left"
            android:textSize="30dp" />
    </RelativeLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@color/app_main_color"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:id="@+id/TransparencySettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topClockPreview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif"
                android:text="@string/tab_style_radial_gradient"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_secondary" />

            <com.appyvet.rangebar.RangeBar
                android:id="@+id/seekbarGradientTransparency"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_below="@+id/textView1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="-7dp"
                custom:connectingLineColor="@color/app_accent_color_darker"
                custom:pinColor="@color/app_accent_color"
                custom:pinRadius="6dp"
                custom:rangeBar="false"
                custom:selectorColor="@color/app_accent_color"
                custom:selectorSize="2dp"
                custom:tickColor="@color/app_darker_color"
                custom:tickEnd="255"
                custom:tickInterval="10" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/tab_style_inner_intensity"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_secondary" />

            <com.appyvet.rangebar.RangeBar
                android:id="@+id/SeekBarPieIntensity"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="-7dp"
                custom:connectingLineColor="@color/app_accent_color_darker"
                custom:pinColor="@color/app_accent_color"
                custom:pinRadius="6dp"
                custom:rangeBar="false"
                custom:selectorColor="@color/app_accent_color"
                custom:selectorSize="2dp"
                custom:tickColor="@color/app_darker_color"
                custom:tickEnd="255"
                custom:tickInterval="10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="7dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/tab_style_outer_intensity"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_secondary" />


            <com.appyvet.rangebar.RangeBar
                android:id="@+id/SeekBarOut"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="-7dp"
                custom:connectingLineColor="@color/app_accent_color_darker"
                custom:pinColor="@color/app_accent_color"
                custom:pinRadius="6dp"
                custom:rangeBar="false"
                custom:selectorColor="@color/app_accent_color"
                custom:selectorSize="2dp"
                custom:tickColor="@color/app_darker_color"
                custom:tickEnd="255"
                custom:tickInterval="10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:text="@string/widget_settings_action_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_primary_color" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:background="@color/divider_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/configure_choose_program_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_secondary" />

            <RelativeLayout
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_below="@+id/textView3"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/imageViewClockPreview"
                    android:layout_width="143dp"
                    android:layout_height="143dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/clock_preview" />

                <Button
                    android:id="@+id/buttonProgramOut"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"
                    android:background="@drawable/circlebutton_color_main" />

                <Button
                    android:id="@+id/buttonProgram"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:alpha="0.5"
                    android:background="@drawable/circlebutton_color_accent"
                    android:fontFamily="sans-serif-light" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:text="@string/widget_settings_action_event"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_primary_color" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:background="@color/divider_color" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">


                <CheckBox
                    android:id="@+id/checkBoxCalendarFullDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/configure_fullday" />

                <CheckBox
                    android:id="@+id/checkBoxCalendarColors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/configure_colorfromcalendar" />

                <CheckBox
                    android:id="@+id/checkBoxCalendarGoing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/configure_notgoing" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/normal_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topClockPreview"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-20dp"
        android:src="@drawable/ic_action_settings"
        fab:fab_colorNormal="@color/app_accent_color"
        fab:fab_colorPressed="@color/app_accent_color_darker"
        fab:fab_colorRipple="@color/app_accent_color_ripple"
        fab:fab_shadow="false"
        fab:fab_type="mini" />

</RelativeLayout>